# api_trct

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  makefile  performance_report.md  performance_test.py  pyproject.toml  requirements.txt  test_api.py
src/: config.py  exceptions.py  main.py
src/anomaly_models/: __init__.py  base_model.py  model_factory.py  sklearn_model.py  statistical_model.py
src/api/: __init__.py  dependencies.py  exception_handlers.py  routes.py
src/models/: __init__.py  anomaly_model.py  schemas.py
src/services/: __init__.py  anomaly_service.py  base_training_service.py  external_training_service.py  local_training_service.py  visualization_service.py
src/storage/: __init__.py  base_storage.py  filesystem_storage.py  model_store.py  s3_storage.py  storage_factory.py
src/tests/: test_anomaly_service.py  test_model_store.py  test_routes.py  test_validation.py
src/utils/: __init__.py  base_metrics.py  logger.py  memory_metrics.py  metrics.py  metrics_factory.py  prometheus_metrics.py
