[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomaly-detection-api"
version = "0.1.0"
description = "API for detecting anomalies in machinery data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "bmmuc@cin.ufpe.br"}
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "numpy==2.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "requests>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]