[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomaly-detection-api"
version = "0.1.0"
description = "API for detecting anomalies in machinery data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "bmmuc", email = "bmmuc@cin.ufpe.br"}
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "numpy==2.1.2",
    "filelock>=3.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "requests>=2.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]